--- a/library.properties
+++ b/library.properties
@@ -3,6 +3,7 @@ version=1.0.0
 author=Sebastien Marchand
 maintainer=MarScaper <sebastien@marscaper.com>
 sentence=Take control of Genesis/Mega Drive gamepad by Sega.
+paragraph=Take control of Genesis/Mega Drive gamepad by Sega.
 category=Driver
 url=https://github.com/MarScaper/genesisgamepad
 architectures=*
