--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Sebastien Marchand
 maintainer=MarScaper <sebastien@marscaper.com>
 sentence=Take control of Genesis/Mega Drive gamepad by Sega.
 paragraph=Take control of Genesis/Mega Drive gamepad by Sega.
-category=Driver
+category=Device Control
 url=https://github.com/MarScaper/genesisgamepad
 architectures=*
